Flash on login/logout. Fix z-index. Lift out common function.

--- a/public/css/master.less
+++ b/public/css/master.less
@@ -550,7 +550,7 @@ form {
 	display: none;
 	margin: 0 auto;
 	.well {
-		z-index: 999;
+		z-index: 2048;
 		position: absolute;
 
 		min-width: 50%;
